fix(styles): update contrast function
Using a new algorithm to calculate color contrast as the old one did not satisfy WCAG 2.1 AA in all cases (success button). The new check is based on this blogpost https://codetuts.dev/text-contrast-sass/ with adaptions for modern sass syntax and our needs.

--- a/packages/styles/src/components/toast.scss
+++ b/packages/styles/src/components/toast.scss
@@ -7,6 +7,7 @@
 @use './../variables/components/alert';
 @use './../components/close';
 @use './../functions/color' as color-fn;
+@use './../functions/contrast' as contrast-fn;
 @use './../placeholders/color' as color-ph;
 @use './../placeholders/notifications';
 
@@ -155,7 +156,7 @@
     --post-bg-rgb: #{color-fn.rgb-values($color)};
     @extend %notification-#{$name};
 
-    @if (color-fn.get-contrast-color($color) != #000) {
+    @if (contrast-fn.light-or-dark($color) == "dark") {
       @extend %color-background-dark-variables;
     } @else {
       @extend %color-background-light-variables;
